# finitewave-model-template

./: README.md  pyproject.toml
examples/: model_example.py
finitewave_model/: model_interface.py
implementation/: model_0d.py
model_template/: ops.py
tests/: model_test.py
