[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
# Replace "model_template" with the actual model's ID. 
name = "finitewave-model-model_template"
version = "0.1.0"
# Replace with the model's description.
description = "Readable cardiac model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["cardiac", "electrophysiology", "finitewave", "model"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]

dependencies = []

# Important: entry point, which is used by Finitewave
# Replace "model_template" with the actual model's ID. 
[project.entry-points."finitewave.models"]
model_template = "finitewave_models.model_template"

[tool.hatch.build.targets.wheel]
packages = ["finitewave_models"]

[tool.hatch.metadata]
allow-direct-references = true